# tigerros.github.io

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  Trunk.toml  build.sh  html-min.json  index.html  package-lock.json  package.json  report.html  report.json  rollup.config.mjs  styles.css  tigerros_web.js  tigerros_web_bg.wasm
.github/workflows/: build.yaml  correctness.yml  rust.yaml  static.yml
calculator/: index.html
css/: dark.css  light.css
files/: index.txt
files/cdn/: YewFunctionComponent.vm  res-styles.css
js/: pow.js  themes.js
main_page/: index.html
power_calculator/: index.html  pow.html
src/: main.rs  prelude.rs  route.rs  router.rs  web_util.rs
src/components/: breadcrumbs.rs  github_dir_listing.rs  layout.rs  mod.rs  navigation.rs
src/routers/: better_route.rs  main_router.rs  mod.rs  projects_router.rs
src/routes/: app.rs  blog.rs  cdn.rs  contact.rs  dirix.rs  home.rs  mod.rs  not_found.rs  projects.rs
src/scss/: _table.scss  _variables.scss  styles.scss
static/: index.html
styles/: styles.css
