[package]
name = "tigerros_web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
gloo-net = { features = ["http"], default-features = false, version = "0.4.0" }
wasm-bindgen-futures = "0.4.37"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = "symbols"
