[package]
name = "tigerros_web"
version = "0.1.0"
edition = "2021"
#build = "build/build.rs"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
gloo-net = { version = "0.4.0" , default-features = false, features = ["http"] }
wasm-bindgen-futures = "0.4.37"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = "symbols"
