[package]
name = "tigerros_web"
edition = "2021"
version = "0.1.0"
authors = ["Leonard D. <tigerros.gh@gmail.com>"]

[dependencies]
dioxus = "0.4.0"
dioxus-router = "0.4.1"
dioxus-web = "0.4.0"
dry-mods = "0.1.5"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
